tests/explicit_inexact/explicit_inexact.exp
Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Cannot cast `x` to object type because inexact `U` [1] is incompatible with exact object type [2]. [incompatible-exact]

   test.js:8:1
   8| x as {||}; // Error, inexact vs. exact
      ^

References:
   test.js:5:16
   5| declare var x: U;
                     ^ [1]
   test.js:8:6
   8| x as {||}; // Error, inexact vs. exact
           ^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:8:1

Cannot cast `x` to object type because property `foo` is extra in `U` [1] but missing in object type [2]. Exact objects
do not accept extra props. [incompatible-type]

   test.js:8:1
   8| x as {||}; // Error, inexact vs. exact
      ^

References:
   test.js:5:16
   5| declare var x: U;
                     ^ [1]
   test.js:8:6
   8| x as {||}; // Error, inexact vs. exact
           ^^^^ [2]



Found 2 errors
